--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         }
     ],
     "require": {
-        "php" : "~7.1"
+        "php": "~7.1",
+        "slim/slim": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=7.0",
@@ -35,13 +36,23 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\JDolba\\SlimHttpSmokeTesting\\": "tests"
-        }
+        },
+        "classmap": [
+          "example/tests/MyAwesomeApplicationSmokeTest.php"
+        ]
     },
     "scripts": {
-        "test": "phpunit",
+        "test": [
+          "phpunit",
+          "phpunit example/tests/MyAwesomeApplicationSmokeTest.php"
+        ],
         "check-style": "phpcs src tests",
         "fix-style": "phpcbf src tests",
-        "check-phpstan": "phpstan analyse src tests -l 7"
+        "check-phpstan": "phpstan analyse src tests example -l 7",
+        "checks": [
+            "@check-style",
+            "@check-phpstan"
+        ]
     },
     "extra": {
         "branch-alias": {
