--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
         }
     ],
     "require": {
-        "php": "~7.1",
+        "php": "~7.1||~8.0",
         "slim/slim": "~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : ">=7.0",
-        "squizlabs/php_codesniffer": "^3.0",
-        "phpstan/phpstan": "^0.10",
-        "phpstan/phpstan-phpunit": "^0.10"
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-phpunit": "^0.12",
+        "phpunit/phpunit": "^9.3",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
         "psr-4": {
